# appimage_updater

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  justfile  pack.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
