[package]
name = "appimage_updater"
version = "0.1.0"
description = "A CLI tool to look for AppImages in your $PATH and call appimageupdatetool to bulk update them"
authors = [ "Francesco Pira (@pirafrank)" ]
license = "MIT"
repository = "https://github.com/pirafrank/appimage_updater"
documentation = "https://github.com/pirafrank/appimage_updater/blob/main/README.md"
readme = "README.md"
edition = "2021"
rust-version = "1.79.0"
build = "build.rs"

[dependencies]
rayon = "1.5"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

[build-dependencies]
chrono = "0.4.38"
